# gotime

./: .env.example  .gitignore  .pyup.yml  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  alembic.ini  docker-compose.test.yml  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  pull_request_template.md
.github/scripts/: extract_changelog.py
.github/workflows/: ci.yml  deploy.yml  deployment.yml  docs.yml  integration.yml  pylint.yml  release.yml  static-analysis.yml  tests.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial.py  0002_trip_indexes_and_defaults.py
docs/: Makefile  architecture.md  compliance.md  conf.py  index.md  index.rst  installation.rst  make.bat  pricing.md  release.md  roadmap.md  schema.md  storage.md  usage.rst  versioning.md
docs/providers/: azure.md  bing.md  google.md  here.md  index.md  mapbox.md  mapquest.md  tomtom.md
gotime/: __init__.py  cli.py  gotime.py  maps.py  providers.py
scripts/: prepare-release.sh  rollback-release.sh
src/gotime/: __init__.py  __main__.py  _version.py  cli.py  config.py  logging.py  models.py
src/gotime/db/: __init__.py  models.py  session.py
src/gotime/providers/: __init__.py  azure.py  base.py  bing.py  google.py  here.py  mapbox.py  mapquest.py  registry.py  tomtom.py
src/gotime/services/: __init__.py  query.py  verify.py
tests/: conftest.py  test_cli.py  test_command_line.py  test_config.py  test_db.py  test_gotime.py  test_logging.py  test_models.py  test_providers.py  test_providers_verify.py  test_registry.py  test_schema_drift.py  test_services.py  test_version.py
tests/integration/: conftest.py  test_providers_live.py
