[build-system]
requires = ["hatchling>=1.26", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "gotime"
dynamic = ["version"]
description = "Multi-provider driving directions and real-time traffic collector with a Typer CLI and SQL persistence."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
authors = [
    { name = "GoTime Contributors" },
]
keywords = [
    "traffic",
    "directions",
    "routing",
    "google-maps",
    "bing-maps",
    "tomtom",
    "here",
    "mapquest",
    "mapbox",
    "azure-maps",
    "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "pydantic>=2.6",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "respx>=0.21",
    "black>=24.4",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-requests>=2.31",
]
docs = [
    "sphinx>=7.3",
    "myst-parser[linkify]>=3.0",
    "furo>=2024.5.6",
    "sphinx-copybutton>=0.5",
    "sphinxcontrib-mermaid>=1.0",
]

[project.urls]
Homepage = "https://github.com/mgeiger/gotime"
Documentation = "https://gotime.readthedocs.io/en/latest/"
Changelog = "https://github.com/mgeiger/gotime/blob/main/CHANGELOG.md"
Issues = "https://github.com/mgeiger/gotime/issues"

[project.scripts]
gotime = "gotime.cli:app"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0+dev"

[tool.hatch.build.hooks.vcs]
version-file = "src/gotime/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/gotime"]

[tool.hatch.build.targets.sdist]
include = [
    "src/gotime",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "docs",
    "alembic",
    "alembic.ini",
]

# ---------- Black ----------
[tool.black]
line-length = 120
target-version = ["py313"]
force-exclude = '_version\.py'

# ---------- Ruff ----------
[tool.ruff]
line-length = 120
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C90", # mccabe
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "S",   # flake8-bandit (catches hardcoded secrets, S105/S106/S107)
]
ignore = [
    "E501", # line length handled by Black
    "S101", # assert usage in tests is fine
    "S311", # pseudo-random is fine for demo data
    "S603", # subprocess (for mining scripts that run docker)
    "S607",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803", "B011", "S105", "S106", "S107"]
"src/gotime/cli.py" = ["B008"]

# ---------- mypy ----------
[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
files = ["src/gotime", "tests"]
plugins = []

# ---------- pytest ----------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=gotime",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=90",
    "-m", "not integration",
]
testpaths = ["tests"]
markers = [
    "integration: hits a real provider API; requires the provider's API key to run (otherwise skipped).",
]

# ---------- coverage ----------
[tool.coverage.run]
branch = true
source = ["gotime"]
omit = [
    "src/gotime/__main__.py",
    "src/gotime/_version.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false
